multi-process broadcast receiver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- activity -->
-
         <!-- splash -->
         <activity
             android:name="com.ytinrete.splash.YtSplashActivity"
@@ -62,6 +60,10 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
+        <service
+            android:name="com.ytinrete.music.service.YtMusicService"
+            android:enabled="true"/>
+
         <!-- multi process -->
 
         <activity android:name="com.ytinrete.multiproccess.MtpActivity0">
@@ -69,7 +71,8 @@
 
         </activity>
 
-        <activity android:name="com.ytinrete.multiproccess.MtpActivity1"
+        <activity
+            android:name="com.ytinrete.multiproccess.MtpActivity1"
             android:process=":test">
 
 
@@ -80,10 +83,15 @@
 
         </activity>
 
+        <receiver
+            android:name="com.ytinrete.multiproccess.MtpBroadCastReceiver"
+            android:process=":test">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
 
-        <service
-            android:name="com.ytinrete.music.service.YtMusicService"
-            android:enabled="true"/>
+        </receiver>
+
 
     </application>
 
