multi process lab

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    provided 'com.android.support:appcompat-v7:25.1.0'
 //    compile 'com.android.support:recyclerview-v7:25.1.0'
 
 //    complie 'com.android.support:palette-v7:23.4.0'
