add product flavor for lab add weex

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.antfortune.freeline'
-apply plugin: 'realm-android'
+//apply plugin: 'com.antfortune.freeline'
+//apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -18,6 +18,26 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    productFlavors{
+        normal{
+
+        }
+
+        music{
+            applicationId "com.ytinrete.android.music"
+        }
+
+        weex{
+            applicationId "com.ytinrete.android.lab.weex"
+        }
+
+        multiproccess{
+            applicationId "com.ytinrete.android.lab.mtp"
+        }
+
+
     }
 
     packagingOptions {
@@ -42,25 +62,28 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
     compile project(":mvp")
-
-//    compile project(":ijkplayer")
-
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'org.codehaus.jackson:jackson-core-asl:1.9.13'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
 
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    provided 'com.android.support:appcompat-v7:25.1.0'
-//    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
 
-//    complie 'com.android.support:palette-v7:23.4.0'
-    compile 'com.android.support:palette-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
+    musicCompile 'com.android.support:palette-v7:25.2.0'
+    musicCompile project(":ijkplayer")
+
+    weexCompile 'com.alibaba:fastjson:1.2.31'
+    weexCompile 'com.taobao.android:weex_sdk:0.11.0@aar'
 
 
 
-    compile 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
+
+
+
 }
