--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,25 @@
 
 buildscript {
     repositories {
+
+        maven{
+            url 'http://maven.aliyun.com/nexus/content/groups/public'
+        }
+
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-        classpath 'com.antfortune.freeline:gradle:0.8.4'
-        classpath "io.realm:realm-gradle-plugin:2.2.1"
+        classpath 'com.android.tools.build:gradle:2.3.1'
+//        classpath 'com.antfortune.freeline:gradle:0.8.4'
+        classpath "io.realm:realm-gradle-plugin:3.1.3"
     }
 }
 
 allprojects {
     repositories {
+        maven{
+            url 'http://maven.aliyun.com/nexus/content/groups/public'
+        }
         jcenter()
     }
 }
