--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,11 @@ android {
 
     productFlavors{
         normal{
-
+            applicationId "com.ytinrete.android.lab.normal"
         }
 
         music{
-            applicationId "com.ytinrete.android.music"
+            applicationId "com.ytinrete.android.lab.music"
         }
 
         weex{
@@ -73,6 +73,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:multidex:1.0.1'
 
     musicCompile 'com.android.support:palette-v7:25.2.0'
     musicCompile project(":ijkplayer")
